# intelligent-model-router

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-zh.md  README.md  SKILL.md  agent_bridge.py  build_exe.bat  claude-code-hooks.json  config.yaml  examples.py  gateway.py  package.json  providers.py  pyproject.toml  requirements.txt  router.py  router.ts  verifier.py
docs/: LLM-CAPABILITY-ANALYSIS.md
static/: index.html
